k8s/boy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boy
  labels:
    app: kids
    gender: boy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kids
      gender: boy
  template:
    metadata:
      labels:
        app: kids
        gender: boy
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: boy
        image: "<youracr>.azurecr.io/boy:latest"
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
