k8s/service-girl-ext.yml
kind: Service
apiVersion: v1
metadata:
  name: girl-external
  annotations:
   service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    gender: girl
  type: LoadBalancer
