k8s/service-random.yml
kind: Service
apiVersion: v1
metadata:
  name: random-internal
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: kids
  type: ClusterIP
