k8s/ingress-kids-path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kids-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /boy
        pathType: Prefix 
        backend:
          service:
            name: boy-internal
            port:
              number: 80
      - path: /girl
        pathType: Prefix 
        backend:
          service:
            name: girl-internal
            port:
              number: 80
      - path: /neutral
        pathType: Prefix 
        backend:
          service:
            name: neutral-internal
            port:
              number: 80              
      - path: /random
        pathType: Prefix 
        backend:
          service:
            name: random-internal
            port:
              number: 80
