k8s/ingress-kids-url.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kids-ingress-url
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: boy.devopsXX.azuredemo.eu
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: boy-internal
            port:
              number: 80
  - host: girl.devopsXX.azuredemo.eu
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: girl-internal
            port:
              number: 80
  - host: random.devopsXX.azuredemo.eu
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: random-internal
            port:
              number: 80
  - host: devopsXX.azuredemo.eu
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: random-internal
            port:
              number: 80
